--- a/deletion_account.html
+++ b/deletion_account.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="max-age=0, no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <title>Kidkash - Account Deletion</title>
+</head>
+<body>
+
 <div style="padding: 5em;text-align: center;">
     <h1>KidKash - Request Account Deletion</h1>
     
@@ -10,5 +22,7 @@
     <p>If you have any questions or need further assistance, feel free to contact us at&nbsp;<a href="mailto:cognitiia@gmail.com">cognitiia@gmail.com</a>.</p>
     <hr>
     
-    <p>For more information about how we handle your data and our privacy practices, please review our&nbsp;<a href="https://backend.kidkash.io/privacy_policy.html">Privacy Policy</a>.</p>
+    <p>For more information about how we handle your data and our privacy practices, please review our&nbsp;<a href="https://kidkash.io/privacy_policy.html">Privacy Policy</a>.</p>
 </div>
+</body>
+</html>
