--- a/deletion_account.html
+++ b/deletion_account.html
@@ -22,7 +22,7 @@
     <p>If you have any questions or need further assistance, feel free to contact us at&nbsp;<a href="mailto:cognitiia@gmail.com">cognitiia@gmail.com</a>.</p>
     <hr>
     
-    <p>For more information about how we handle your data and our privacy practices, please review our&nbsp;<a href="https://kidkash.io/privacy_policy.html">Privacy Policy</a>.</p>
+    <p>For more information about how we handle your data and our privacy practices, please review our&nbsp;<a href="https://kidkashapp.github.io/pages/privacy_policy.html">Privacy Policy</a>.</p>
 </div>
 </body>
 </html>
