--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -40,7 +40,7 @@
         <p><strong>Application</strong>&nbsp;means the software program provided by the Company downloaded by You on any electronic device, named Kidkash.</p>
         </li>
         <li>
-        <p><strong>Company</strong>&nbsp;(referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Agreement) refers to&nbsp;<a href="https://kidkash.io/">kidkash.io</a>&nbsp;,Bolivia, Santa Cruz.</p>
+        <p><strong>Company</strong>&nbsp;(referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Agreement) refers to&nbsp;<a href="https://kidkashapp.github.io/pages/">kidkash.io</a>&nbsp;,Bolivia, Santa Cruz.</p>
         </li>
         <li>
         <p><strong>Country</strong>&nbsp;refers to: Bolivia, Santa Cruz.</p>
@@ -242,7 +242,7 @@
         <p>By email:<a href="mailto:cognitiia@gmail.com">&nbsp;cognitiia@gmail.com</a></p>
         </li>
         <li>
-        <p>By visiting this page on our website: [&nbsp;<a href="https://kidkash.io/">kidkash.io</a>&nbsp;]</p>
+        <p>By visiting this page on our website: [&nbsp;<a href="https://kidkashapp.github.io/pages/">kidkash.io</a>&nbsp;]</p>
         </li>
     </ul>
     </div>
