--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>Kidkash</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="max-age=0, no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <title>Kidkash</title>
+</head>
+<body>
+<div style="align-self: center;text-align: center;border-radius: 50%;">
+    <img style="width: 200px;
+        height: 200px;" src="logo (2).png"/>
+</div>
+
+</div>
+</body>
+</html>
