--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div style="align-self: center;text-align: center;border-radius: 50%;">
     <img style="width: 200px;
-        height: 200px;" src="logo (2).png"/>
+        height: 200px;" src="logo.png"/>
 </div>
 
 </div>
